# aoc

./: Cargo.toml  justfile
.template/: Cargo.toml
.template/benches/: benchmarks.rs
.template/src/: lib.rs  main.rs
days/day1/: Cargo.toml
days/day10/: Cargo.toml
days/day10/src/: lib.rs  main.rs
days/day2/src/: lib.rs
days/day3/src/: main.rs
days/day4/: Cargo.toml
days/day4/src/: main.rs
days/day5/: Cargo.toml
days/day5/src/: main.rs
days/day6/: Cargo.toml
days/day6/src/: lib.rs  main.rs
days/day7/: Cargo.toml
days/day7/src/: lib.rs  main.rs
days/day8/: Cargo.toml
days/day8/src/: lib.rs  main.rs
days/day9/: Cargo.toml
days/day9/src/: lib.rs  main.rs
src/day1/: input.txt
src/day1/src/: lib.rs  main.rs
src/day2/src/: main.rs
src/day3/: Cargo.toml
src/day3/src/: lib.rs
src/day4/src/: lib.rs
util/: Cargo.toml
util/scripts/: getinput.rs
util/src/: grid.rs  lib.rs
years/2015/01/: Cargo.toml
years/2015/01/benches/: benchmarks.rs
years/2015/01/src/: lib.rs  main.rs
years/2015/02/: Cargo.toml
years/2015/02/benches/: benchmarks.rs
years/2015/02/src/: lib.rs  main.rs
years/2015/03/: Cargo.toml
years/2015/03/benches/: benchmarks.rs
years/2015/03/src/: lib.rs  main.rs
years/2015/04/: Cargo.toml
years/2015/04/benches/: benchmarks.rs
years/2015/04/src/: lib.rs  main.rs
years/2015/05/: Cargo.toml
years/2015/05/benches/: benchmarks.rs
years/2015/05/src/: lib.rs  main.rs
years/2015/06/: Cargo.toml  input.txt
years/2015/06/benches/: benchmarks.rs
years/2015/06/src/: lib.rs  main.rs
years/2015/07/: Cargo.toml
years/2015/07/benches/: benchmarks.rs
years/2015/07/src/: lib.rs  main.rs
years/2015/08/: Cargo.toml
years/2015/08/benches/: benchmarks.rs
years/2015/08/src/: lib.rs  main.rs
years/2015/09/: Cargo.toml
years/2015/09/benches/: benchmarks.rs
years/2015/09/src/: lib.rs  main.rs
years/2015/10/: Cargo.toml
years/2015/10/benches/: benchmarks.rs
years/2015/10/src/: lib.rs  main.rs
years/2015/11/: Cargo.toml
years/2015/11/benches/: benchmarks.rs
years/2015/11/src/: lib.rs  main.rs
years/2015/12/: Cargo.toml
years/2015/12/benches/: benchmarks.rs
years/2015/12/src/: lib.rs  main.rs
years/2015/13/: Cargo.toml
years/2015/13/benches/: benchmarks.rs
years/2015/13/src/: lib.rs  main.rs
years/2015/14/: Cargo.toml
years/2015/14/benches/: benchmarks.rs
years/2015/14/src/: lib.rs  main.rs
years/2015/15/: Cargo.toml
years/2015/15/benches/: benchmarks.rs
years/2015/15/src/: lib.rs  main.rs
years/2015/16/: Cargo.toml
years/2015/16/benches/: benchmarks.rs
years/2015/16/src/: lib.rs  main.rs
years/2015/17/: Cargo.toml
years/2015/17/benches/: benchmarks.rs
years/2015/17/src/: lib.rs  main.rs
years/2015/18/: Cargo.toml
years/2015/18/benches/: benchmarks.rs
years/2015/18/src/: lib.rs  main.rs
years/2015/19/: Cargo.toml
years/2015/19/benches/: benchmarks.rs
years/2015/19/src/: lib.rs  main.rs
years/2023/01/: Cargo.toml
years/2023/01/benches/: benchmarks.rs
years/2023/01/src/: lib.rs  main.rs
years/2023/02/: Cargo.toml
years/2023/02/benches/: benchmarks.rs
years/2023/02/src/: lib.rs  main.rs
years/2023/03/: Cargo.toml
years/2023/03/benches/: benchmarks.rs
years/2023/03/src/: lib.rs  main.rs
years/2023/04/: Cargo.toml
years/2023/04/benches/: benchmarks.rs
years/2023/04/src/: lib.rs  main.rs
years/2023/05/: Cargo.toml
years/2023/05/benches/: benchmarks.rs
years/2023/05/src/: lib.rs  main.rs
years/2023/06/: Cargo.toml
years/2023/06/benches/: benchmarks.rs
years/2023/06/src/: lib.rs  main.rs
years/2023/07/: Cargo.toml
years/2023/07/benches/: benchmarks.rs
years/2023/07/src/: lib.rs  main.rs
years/2023/08/: Cargo.toml
years/2023/08/benches/: benchmarks.rs
years/2023/08/src/: lib.rs  main.rs
years/2023/09/: Cargo.toml
years/2023/09/benches/: benchmarks.rs
years/2023/09/src/: lib.rs  main.rs
years/2023/10/: Cargo.toml
years/2023/10/benches/: benchmarks.rs
years/2023/10/src/: lib.rs  main.rs
years/2024/01/: Cargo.toml
years/2024/01/benches/: benchmarks.rs
years/2024/01/src/: lib.rs  main.rs
years/2024/02/: Cargo.toml
years/2024/02/benches/: benchmarks.rs
years/2024/02/src/: lib.rs  main.rs
years/2024/03/: Cargo.toml
years/2024/03/benches/: benchmarks.rs
years/2024/03/src/: lib.rs  main.rs
years/2024/04/: Cargo.toml
years/2024/04/benches/: benchmarks.rs
years/2024/04/src/: lib.rs  main.rs
years/2024/05/: Cargo.toml
years/2024/05/benches/: benchmarks.rs
years/2024/05/src/: lib.rs  main.rs
years/2024/06/: Cargo.toml
years/2024/06/benches/: benchmarks.rs
years/2024/06/src/: lib.rs  main.rs
years/2024/07/: Cargo.toml
years/2024/07/benches/: benchmarks.rs
years/2024/07/src/: lib.rs  main.rs
years/2024/08/: Cargo.toml
years/2024/08/benches/: benchmarks.rs
years/2024/08/src/: lib.rs  main.rs
years/2024/09/: Cargo.toml
years/2024/09/benches/: benchmarks.rs
years/2024/09/src/: lib.rs  main.rs
years/2024/10/: Cargo.toml
years/2024/10/benches/: benchmarks.rs
years/2024/10/src/: lib.rs  main.rs
years/2024/11/: Cargo.toml
years/2024/11/benches/: benchmarks.rs
years/2024/11/src/: lib.rs  main.rs
years/2025/01/: Cargo.toml
years/2025/01/benches/: benchmarks.rs
years/2025/01/src/: lib.rs  main.rs
years/2025/02/: Cargo.toml
years/2025/02/benches/: benchmarks.rs
years/2025/02/src/: lib.rs  main.rs
years/2025/03/: Cargo.toml
years/2025/03/benches/: benchmarks.rs
years/2025/04/: Cargo.toml
years/2025/05/: Cargo.toml
years/2025/05/benches/: benchmarks.rs
years/2025/05/src/: lib.rs  main.rs
years/2025/06/: Cargo.toml  perf.data
years/2025/06/benches/: benchmarks.rs
years/2025/06/src/: lib.rs  main.rs
years/2025/07/: Cargo.toml
years/2025/07/benches/: benchmarks.rs
years/2025/07/src/: lib.rs  main.rs
years/2025/08/: Cargo.toml
years/2025/08/benches/: benchmarks.rs
years/2025/08/src/: lib.rs  main.rs
years/2025/09/: Cargo.toml
years/2025/09/benches/: benchmarks.rs
years/2025/09/src/: lib.rs  main.rs
(+5 files in other folders)
