[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = ["years/*/*", "util"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
aoc-util = { path = "util" }

eyre = "*"
itertools = "*"
nom = "8.0.0"
derive_more = { version = "*", features = ["full"] }
strum = { version = "*", features = ["derive"] }
glam = "0.30.9"
euclid = "0.22.11"

[profile.release]
debug = true
