[package]
name = "{{project-name}}"
version.workspace = true
edition.workspace = true

[[bench]]
name = "{{project-name}}-bench"
path = "benches/benchmarks.rs"
harness = false

[dependencies]
aoc-util.workspace = true
itertools.workspace = true
eyre.workspace = true

[dev-dependencies]
divan.workspace = true
