[package]
name = "aoc2015day06"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-util.workspace = true

itertools.workspace = true
eyre.workspace = true
nom.workspace = true
glam.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "aoc2015day06-bench"
path = "benches/benchmarks.rs"
harness = false
