[package]
name = "aoc2015day12"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-util.workspace = true

itertools.workspace = true
eyre.workspace = true

serde_json = "1.0.145"

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "aoc2015day12-bench"
path = "benches/benchmarks.rs"
harness = false
