[package]
name = "aoc2023day01"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
nom.workspace = true
eyre.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "aoc2023day01-bench"
path = "benches/benchmarks.rs"
harness = false
