[package]
name = "aoc2023day05"
version.workspace = true
edition.workspace = true

[dependencies]
aoc-util.workspace = true
eyre.workspace = true
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "aoc2023day05-bench"
path = "benches/benchmarks.rs"
harness = false
