[package]
name = "aoc2024day01"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom.workspace = true
itertools.workspace = true
eyre.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "aoc2024day01-bench"
path = "benches/benchmarks.rs"
harness = false
