[package]
name = "aoc2024day07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-util = { path = "../../../util" }

nom.workspace = true
strum.workspace = true
itertools.workspace = true
eyre.workspace = true
