[package]
name = "aoc2025day06"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "aoc2025day06-bench"
path = "benches/benchmarks.rs"
harness = false

[dependencies]
aoc-util.workspace = true

itertools.workspace = true
eyre.workspace = true

[dev-dependencies]
divan.workspace = true

