[package]
name = "aoc2025day08"
version.workspace = true
edition.workspace = true

[[bench]]
name = "aoc2025day08-bench"
path = "benches/benchmarks.rs"
harness = false

[dependencies]
aoc-util.workspace = true
itertools.workspace = true
eyre.workspace = true
miette = "7.6.0"

petgraph.workspace = true

[dev-dependencies]
divan.workspace = true
