[package]
name = "aoc2025day09"
version.workspace = true
edition.workspace = true

[[bench]]
name = "aoc2025day09-bench"
path = "benches/benchmarks.rs"
harness = false

[dependencies]
aoc-util.workspace = true
itertools.workspace = true
eyre.workspace = true

[dev-dependencies]
divan.workspace = true
